Fixed logo overlaping
Fixed logo overlapping the buttons on the right side

--- a/assets/header.css
+++ b/assets/header.css
@@ -33,6 +33,8 @@
   display: grid;
   grid-template-columns: max-content 1fr max-content;
   gap: 0px 8px;
+  grid-template-areas:
+    "column-2 column-1 column-3";
   align-items: center;
 }
 
